--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
-    
+    <p><a href="recipes/lasagna.html">Lasagna recipe</a></p>
+    <p><a href="recipes/pizza.html">Pizza recipe</a></p>
+    <p><a href="recipes/spaghetti.html">Spaghetti recipe</a></p>
 </body>
 </html>
