--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,7 +5,12 @@
     <title>Odin-recipes</title>
 </head>
 <body>
-    <h1></h1>
-    
+    <h1>Baked Spaghetti</h1>
+    <p>Comforting baked spaghetti recipe with
+        plenty of melted cheese — the perfect dish
+        for potlucks, family gatherings, or a weeknight dinner.</p>
+        <img src="./img/baked-spaghetti.jpg" alt="Baked Spaghetti">
+        
+
 </body>
 </html>
