add image, add unordered list with ingedients

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,8 +9,22 @@
     <p>Comforting baked spaghetti recipe with
         plenty of melted cheese — the perfect dish
         for potlucks, family gatherings, or a weeknight dinner.</p>
-        <img src="./img/baked-spaghetti.jpg" alt="Baked Spaghetti">
+        <img src="../img/baked-spaghetti.jpg" alt="Baked Spaghetti">
+        <p> ingredients:
+            <ul>
+            <li>1 (16 ounce) package spaghetti</li>
+            <li>1 pound ground beef</li>
+            <li>1 onion, chopped</li>
+            <li>1 (32 ounce) jar meatless spaghetti sauce</li>
+            <li>½ teaspoon seasoned salt</li>
+            <li>2 eggs</li>
+            <li>⅓ cup grated Parmesan cheese</li>
+            <li>5 tablespoons butter, melted</li>
+            <li>2 cups small curd cottage cheese, divided</li>
+            <li>5 cups shredded mozzarella cheese, divided</li>
+        </ul></p>
         
+
 
 </body>
 </html>
