--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,31 @@
 </head>
 <body>
     <h1>Valentino's Pizza Crust</h1>
+    <p>This is an excellent pizza crust recipe. I have found it is really good when baked on a pizza stone.</p>
+
+    <img src="../img/valentino-pizza-crust.jpg" alt="valentino's pizza crust">
+
+    <p> ingredients:
+        <ul>
+        <li>1 cup warm water (110 degrees F/45 degrees C)</li>
+        <li>1 tablespoon white sugar</li>
+        <li>2¼ teaspoons active dry yeast</li>
+        <li>3 tablespoons olive oil</li>
+        <li>1 teaspoon salt</li>
+        <li>2½ cups all-purpose flour</li>
+    </ul></p>
+    <p>Directions:
+        <ol>
+            <li>Stir water, sugar and yeast together until dissolved.
+                Add the olive oil and the salt. Stir in the flour until well blended.
+                Let dough rest for 10 minutes.
+            </li>
+            <li>Pat dough into pan or on to a pizza stone using fingers dipped in olive oil.
+                If desired sprinkle basil, thyme or other seasonings on crust.
+                Top with your favorite pizza toppings and bake
+                for 15 to 20 minutes in a preheated 425 degree oven..</li> 
+        </ol>
+    </p>        
+
 </body>
 </html>
